# heart-stats-app

./: .gitattributes  Cargo.toml
locales/: app.yml  date_picker.yml  locales.json  measurements.yml
sample/: doc.txt
src/: app.rs  date_picker.rs  dialog.rs  main.rs  menu.rs
src/panels/: home.rs  input.rs  mod.rs
src/util/: defer.rs  mod.rs
